# hypercode

./: LICENSE  README.md  pyproject.toml  test_agent.py
hypercode/: __init__.py  __main__.py  graph.py  main.py  react_agent.py  tools.py  tui.py
hypercode/agents/: coding_agent.py  debugging_agent.py  orchestrator.py  testing_agent.py  tool_agent.py
hypercode/tools/: __init__.py  copy_file.py  create_folder.py  grep.py  move_file.py  read_file.py  read_file_range.py  rename_file.py  run_cli_command.py  write_file.py
